<resources>
    <string name="app_name">NavigationApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Sign Out</string>

    <string name="menu_registeredtravels">Registered Travels</string>
    <string name="menu_companytravels">Company Travels</string>
    <string name="menu_historytravels">History Travels</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">WELCOME !</string>
    <string name="name">Name</string>
    <string name="date_of_departure">Date of departure</string>
    <string name="end_date">End date</string>
    <string name="number_of_passengers">Number of passengers</string>
    <string name="date_of_application">Date of application</string>
    <string name="start_travel">Start travel</string>
    <string name="hire_society">Hire society</string>
    <string name="finish_travel">Finish travel</string>
    <string name="call">Call</string>
    <string name="validate">Validate</string>
    <string name="send_mail">Send Mail</string>
    <string name="destination">Destination</string>
    <string name="address">Address</string>
    <string name="travel_days">Travel days</string>
    <string name="ok">Ok</string>
    <string name="finish">Finish</string>
    <string name="choose_society_between_the_list">Choose society between the list:</string>
</resources>