<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_registeredtravels">

    <fragment
        android:id="@+id/nav_registeredtravels"
        android:name="il.co.expertize.navigationapp.ui.fragments.RegisteredTravelsFragment"
        android:label="@string/menu_registeredtravels"
        tools:layout="@layout/fragment_registeredtravels" />

    <fragment
        android:id="@+id/nav_companytravels"
        android:name="il.co.expertize.navigationapp.ui.fragments.CompanyTravelsFragment"
        android:label="@string/menu_companytravels"
        tools:layout="@layout/fragment_companytravels" />

    <fragment
        android:id="@+id/nav_historytravels"
        android:name="il.co.expertize.navigationapp.ui.fragments.HistoryTravelsFragment"
        android:label="@string/menu_historytravels"
        tools:layout="@layout/fragment_historytravels" />

</navigation>