<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:id="@+id/title_text"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="16dp"-->
<!--            android:gravity="center"-->
<!--            android:text="The Authentication"-->
<!--            android:textSize="28sp" />-->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:gravity="center"
            android:text="WELCOME !"
            android:textColor="@color/design_default_color_primary"
            android:textSize="28dp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#E0E0E0"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

<!--            <Button-->
<!--                android:id="@+id/btn_email_sign_in"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="4dp"-->
<!--                android:layout_marginRight="4dp"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Sign In" />-->
            <Button

                android:id="@+id/btn_email_sign_in"
                android:layout_width="196dp"
                android:layout_height="60dp"
                android:shadowColor="#03224C"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/sign_in"
                android:backgroundTint="#0009ff"
                android:textColor="#0f056b"
                android:textSize="30sp" />
<!--            <Button-->
<!--                android:id="@+id/btn_email_create_account"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Sign Up"-->
<!--                android:layout_marginLeft="4dp"-->
<!--                android:layout_marginRight="4dp"/>-->
            <Button
                android:id="@+id/btn_email_create_account"
                android:layout_width="194dp"
                android:layout_height="60dp"
                android:backgroundTint="#0009ff"
                android:shadowColor="#03224C"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/sign_up"
                android:textColor="#0f056b"
                android:textSize="30sp"
                tools:ignore="DuplicateIds" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="2.0">

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1.0"
                android:backgroundTint="#ee1010"
                android:shadowColor="#03224C"
                android:text="@string/sign_out"
                android:textColor="#0f056b" />

            <!--            <Button-->
            <!--                android:id="@+id/btn_verify_email"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1.0"-->
            <!--                android:text="Verify Email"-->
            <!--                android:layout_marginLeft="4dp"-->
            <!--                android:layout_marginRight="4dp" />-->

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
